--- a/index2.html
+++ b/index2.html
@@ -78,6 +78,9 @@
 		}
 		div.caption2 {
 			border-bottom: 2px solid #0080ff;
+			width: 470px;
+			margin-left: 15px;
+			margin-top: 20px;
 		}
 		.caption2 {
 			font-size: 130%;
@@ -109,9 +112,9 @@
 			</div>
 			<div class="rightBox">
 				<div class="caption2">Дата рождения:
-				<p>31 февраля</p>
-				<p class="caption2">Место рождения:</p>
-				<p>Поля-луга</p>
+					<p>31 февраля</p>
+					<p class="caption2">Место рождения:</p>
+					<p>Поля-луга</p>
 				</div>
 				<div class="caption2">Soft skills:
 					<p>- Открытая</p>
@@ -119,9 +122,9 @@
 					<p>- Простая</p>
 				</div>
 				<div class="caption2">Обо мне:
-				<p>- Открытая</p>
-				<p>- Радостная</p>
-				<p>- Простая</p>
+					<p>- Открытая</p>
+					<p>- Радостная</p>
+					<p>- Простая</p>
 				</div>
 			</div>
 		</div>
