--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
 		.rightBox {
 			color: #084b8a;
 		}
-		div.caption2 {
-			border-bottom: 2px solid #0080ff;
-			width: 470px;
+		div.rightBox {
 			margin-left: 15px;
 			margin-top: 20px;
+		}
+		p.caption2 {
+			border-bottom: 2px solid #0080ff;
+			width: 470px;
 		}
 		.caption2 {
 			font-size: 130%;
@@ -110,17 +112,20 @@
 				</div>
 			</div>
 			<div class="rightBox">
-				<div class="caption2">Дата рождения:
+				<div>
+					<p class="caption2">Дата рождения:</p>
 					<p>31 февраля</p>
 					<p class="caption2">Место рождения:</p>
 					<p>Поля-луга</p>
 				</div>
-				<div class="caption2">Soft skills:
+				<div>
+					<p class="caption2">Soft skills:</p>
 					<p>- Открытая</p>
 					<p>- Радостная</p>
 					<p>- Простая</p>
 				</div>
-				<div class="caption2">Обо мне:
+				<div>
+					<p class="caption2">Обо мне:</p>
 					<p>- Открытая</p>
 					<p>- Радостная</p>
 					<p>- Простая</p>
