--- a/index.html
+++ b/index.html
@@ -74,13 +74,17 @@
 		}
 		.rightBox {
 			color: #084b8a;
+			line-height: 10px;
 		}
 		div.rightBox {
 			margin-left: 15px;
 			margin-top: 20px;
+			margin-top: 0;
+		}
+		div.rightBox div {
+			border-bottom: 2px solid #0080ff;
 		}
 		p.caption2 {
-			border-bottom: 2px solid #0080ff;
 			width: 470px;
 		}
 		.caption2 {
